MCR-3198 fixed test case